--- a/Figura 2.4 Int/index.html
+++ b/Figura 2.4 Int/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Figura Int 2.4</div>
+        <div id="unity-build-title">Figura 4</div>
       </div>
     </div>
     <script>
