--- a/Figura 2.5 Introducción/index.html
+++ b/Figura 2.5 Introducción/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Figura 5 Intrtoducción</div>
+        <div id="unity-build-title">Figura 5 Introducción</div>
       </div>
     </div>
     <script>
